ola-parser/src/testdata/syntaxTests/constants/constant_with_visibility_inverted.sol
u256 constant y = 7;
// ----
// ParserError 2314: (14-20): Expected identifier but got 'public'
